--- a/lib/template/pages/schedule.jade
+++ b/lib/template/pages/schedule.jade
@@ -1,5 +1,61 @@
 .container
   .page
     h1 Program
+    br
+    h2 Pátek 17.6.
+    br
+    Večerní improvizátorský jam. 
+    br
+    br
+    h2 Sobota 18.6. 
+    br 
+    Studio ALTA, U Výstaviště 21, Praha 7
+    br
+    br
+    Kavárna
+    br
+    14:30 - 14:50 Bertram
+    br
+    15:00 - 15:40 Slam Poetry
+    br
+    15:40 - 17:00 Open mic
+    br
+    17:00 - 17:30 Bertram
+    br
+    br
+    Divadlo
+    br
+    9:30 - 11:00 a 12:00 - 14:00 první workshop Die Gorillas
+    br
+    14:15 - 15:15 Workshop První seznámení s improvizací 
+    br
+    16:15 - 17:00 Talkshow se zástupci účinkujících
+    br
+    17:30 Úvodní slovo
+    br
+    17:45-18:30 IMPRA
+    br
+    18:45-19:30 tba
+    br
+    20:00-20:45 Blood Love and Rethorics Comedy Improv
+    br
+    21:00-22:00 Die Gorillas
+    br
+    br
+    Místnost 1
+    br
+    14:15 - 17:15 Druhý workshop Die Gorillas 
+    br
+    br
+    Místnost 2
+    br
+    10:00 - 13:00 Workshop Masky a Commedia dell’ Arte
+    br
+    br
+    h2 Neděle 19.6.
+    br
+    14:00 - 18:00 Workshop Lee White (Acceptance)
+    br
+    br
+    p Vstupné na odpolední program (do 17:30) je zdarma. Workshopy se platí zvlášť. Více informací v sekci Vstupenky a Workshopy. 
 
-    p Coming soon
