--- a/lib/template/pages/schedule.jade
+++ b/lib/template/pages/schedule.jade
@@ -101,7 +101,12 @@
             .left-col
               .label.label-warning 10:00 - 13:00
             =' '
-            | Masky a Commedia dell' Arte (Janko Polák)
+            | Masky a Commedia dell' Arte (Janko Polák)          li
+          li
+            .left-col
+              .label.label-warning 14:15 - 15:15
+            =' '
+            | První seznámení s improvizací
           li
             .left-col
               .label.label-warning 14:15 - 17:15
